--- a/source/pug/blocks/index/3_companions.pug
+++ b/source/pug/blocks/index/3_companions.pug
@@ -12,10 +12,38 @@ section.companions
       @String imageLink
       @Number level
       @String personName
-      @Array countries
+      @Object countries
       @Array tags
 
-    +companions-card-index('https://via.placeholder.com/285', 99, 'Таня Фирсова', ['sri-lanka', 'thailand', 'seychelles'], ['#ЗОЖ', '#ПП', '#Фитнес', '#пляж', '#авокадо', '#смузи'], fly=true, bus=false, bike=false, walk=false)
-    +companions-card-index('https://via.placeholder.com/285', 80, 'Петя Демин', ['germany', 'czech'], ['#бургер', '#бар', '#футбол', '#концерт', '#крафт'], fly=true, bus=true, bike=false, walk=true)
+    +companions-card-index(
+      'https://via.placeholder.com/285',
+      99,
+      'Таня Фирсова',
+      {
+        'sri-lanka': 'Шри Ланка',
+        'thailand': 'Тайланд',
+        'seychelles': 'Сейшелы'
+      },
+      ['#ЗОЖ', '#ПП', '#Фитнес', '#пляж', '#авокадо', '#смузи'],
+      fly=true,
+      bus=false,
+      bike=false,
+      walk=false
+    )
+
+    +companions-card-index(
+      'https://via.placeholder.com/285',
+      80,
+      'Петя Демин',
+      {
+        'germany': 'Германия',
+        'czech': 'Чехия'
+      },
+      ['#бургер', '#бар', '#футбол', '#концерт', '#крафт'],
+      fly=true,
+      bus=true,
+      bike=false,
+      walk=true
+    )
 
     a.btn.btn--section(href='catalog.html') Показать всех
