Добавил константу для header страницы

--- a/source/pug/catalog.pug
+++ b/source/pug/catalog.pug
@@ -3,6 +3,7 @@ include helpers/mixins
 
 block variables
   - const title = "Путешественники - HTML Academy: Погнали"
+  - const pageTitle = "Попутчики"
 
 block content
   //- Шапка сайта
