Добавил константу для header страницы

--- a/source/pug/blocks/page-header.pug
+++ b/source/pug/blocks/page-header.pug
@@ -29,5 +29,5 @@ header.header
       a.btn.btn--auth-header(href="#") Авторизация
 
     .header__page-caption.page-caption
-      h3.page-caption__text Попутчики
+      h3.page-caption__text #{pageTitle}
       a.page-caption__back-to-home(href='index.html') На главную
