Задание №3. Главная страница

--- a/source/pug/blocks/index/2_destinations.pug
+++ b/source/pug/blocks/index/2_destinations.pug
@@ -1,21 +1,30 @@
 section.destanation
   .wrapper
     .destanation__content
-      h2.destanation__title Направления
-      p.destanation__description Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно там заняться.
+      h2.section-caption.destanation__caption Направления
+      p.destanation__description
+        | Мы не продаем туры
+        br
+        | и ничего не рекламируем.
+        br
+        | Люди сами пишут о странах,
+        br
+        | куда хотели бы отправиться
+        br
+        | и чем можно там заняться.
 
-    //- destination-card(title, subtitle, people, modificator, imageLink='link')
+    //- destination-card(country, description, people, modificator, imageLink='link')
       Если нет ссылки на изображение, будет использоваться ссылка по умолчанию https://via.placeholder.com/186x140
 
-      @String title
-      @String subtitle
+      @String country
+      @String description
       @Number people
       @String modificator
       @String imageLink
 
     .destanation__cards
-      +destination-card('Таиланд', 'Джунгли зовут!', 18321, 'thailand')
-      +destination-card('Франция', 'Трэ бьен, манифик!', 12518, 'france')
-      +destination-card('Чехия', 'Закоулки старой Европы', 5326, 'czech')
+      +destination-card('Таиланд', 'Джунгли зовут!', 18321, 'thailand', 'img/thailand-mobile@1x.jpg')
+      +destination-card('Франция', 'Трэ бьен, манифик!', 12518, 'france', 'img/france-mobile@1x.jpg')
+      +destination-card('Чехия', 'Закоулки старой Европы', 5326, 'czech', 'img/czech-mobile@1x.jpg')
 
-    a.btn.btn--section(href='catalog.html') Показать все
+    a.section-btn.destanation__btn(href='catalog.html') Показать все
