--- a/source/pug/blocks/catalog/1_country-filter.pug
+++ b/source/pug/blocks/catalog/1_country-filter.pug
@@ -1,11 +1,11 @@
 section.companions-country-filter
   h2.companions-country-filter__title Фильтрация по странам
-  button.companions-country-filter__open-btn Открыть фильтр
-  button.companions-country-filter__close-btn.companions-country-filter__close-btn--top Закрыть фильтр
+  button.companions-country-filter__open-btn(type="button") Открыть фильтр
+  button.companions-country-filter__close-btn.companions-country-filter__close-btn--top(type="button") Закрыть фильтр
 
   +companions-country-filter-letters('Европа')
   +companions-country-filter-letters('Азия')
   +companions-country-filter-letters('Америка')
   +companions-country-filter-letters('Острова')
 
-  button.companions-country-filter__close-btn.companions-country-filter__close-btn--bottom Свернуть
+  button.companions-country-filter__close-btn.companions-country-filter__close-btn--bottom(type="button") Свернуть
