--- a/source/pug/blocks/index/popup.pug
+++ b/source/pug/blocks/index/popup.pug
@@ -1,17 +1,17 @@
-.tariffs__popup.popup-content
-  .popup-content__wrapper
-    header.popup-content__caption Бизнес-тарифы
-    ul.popup-content__table-list
-      li.popup-content__item
-        p.popup-content__service Реклама у блоггера
-        p.popup-content__price 300 000 руб./пост
-      li.popup-content__item
-        p.popup-content__service Накрутка подписчиков
-        p.popup-content__price от 1 руб./шт.
-      li.popup-content__item
-        p.popup-content__service Лайки от ботов
-        p.popup-content__price от 20 коп./лайк
-      li.popup-content__item
-        p.popup-content__service Ваш продакт-плейсмент
-        p.popup-content__price Индивидуально
-    button.popup-content__close-btn(type='button') Закрыть окно
+.popup.tariffs__popup
+  .popup__wrapper
+    header.popup__caption Бизнес-тарифы
+    ul.popup__table-list
+      li.popup__item
+        span.popup__service Реклама у блоггера
+        span.popup__price 300 000 руб./пост
+      li.popup__item
+        span.popup__service Накрутка подписчиков
+        span.popup__price от 1 руб./шт.
+      li.popup__item
+        span.popup__service Лайки от ботов
+        span.popup__price от 20 коп./лайк
+      li.popup__item
+        span.popup__service Ваш продакт-плейсмент
+        span.popup__price Индивидуально
+  button.popup__close-btn(type='button') Закрыть окно
