--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -38,7 +38,7 @@ block content
   include blocks/footer.pug
 
   //- Всплывающее окно
-  //- include blocks/index/popup.pug
+  include blocks/index/popup.pug
 
 
 block scripts
