--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,10 @@
 // Base files
 @import "base/base.scss";
 @import "base/fonts.scss";
+@import "base/wrapper.scss";
+@import "base/section-caption.scss";
+@import "base/section-btn.scss";
+@import "base/visually-hidden.scss";
 
 // Block files
 @import "blocks/header.scss";
