Закончил стили для планшета

--- a/source/pug/blocks/index/1_service.pug
+++ b/source/pug/blocks/index/1_service.pug
@@ -1,5 +1,5 @@
 section.service
-  .wrapper
+  .wrapper.service__wrapper
     .service__content
       h2.section-caption.service__caption О сервисе
       p.service__description
@@ -9,4 +9,4 @@ section.service
         br
         | одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.
       p.service__tagline А если найдете кого-то близкого по духу — скорее зовите в совместный трип!
-      //- a.btn.btn--section(href='#') Подробнее
+      a.section-btn.service__btn(href='#') Подробнее
