--- a/source/pug/blocks/index/2_destinations.pug
+++ b/source/pug/blocks/index/2_destinations.pug
@@ -1,5 +1,5 @@
 section.destanation
-  .wrapper
+  .wrapper.destanation__wrapper
     .destanation__content
       h2.section-caption.destanation__caption Направления
       p.destanation__description
