--- a/source/pug/blocks/index/3_companions.pug
+++ b/source/pug/blocks/index/3_companions.pug
@@ -1,11 +1,14 @@
 section.companions
-  .wrapper
+  .wrapper.companions__wrapper
 
     .companions__content
       h2.section-caption.companions__caption Попутчики
       p.companions__description
         | Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.
-      p.companions__tagline Теперь можно легко найти единомышленников!
+      p.companions__tagline
+        | Теперь можно легко
+        br
+        | найти единомышленников!
 
     //- mixin companions-card(imageLink, level, personName, countries, tags)
 
