--- a/source/pug/blocks/index/5_registration.pug
+++ b/source/pug/blocks/index/5_registration.pug
@@ -1,5 +1,5 @@
 section.registration
-  .wrapper
+  .wrapper.registration__wrapper
     h2.section-caption.registration__caption Заинтересовались?
     p.registration__description
       | Зарегистрируйтесь,
