--- a/source/sass/base/section-btn.scss
+++ b/source/sass/base/section-btn.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 24px;
+  padding: 23px 24px;
   border-radius: 10px;
   font-size: 18px;
   font-weight: 700;
@@ -59,5 +59,16 @@
       border-left-color: rgba(#ffffff, 0.3);
     }
 
+  }
+}
+
+
+@media only screen and (min-width: $tablet-width) {
+
+  .section-btn {
+    padding: 28px 34px;
+    border-radius: 20px;
+    font-size: 24px;
+    line-height: 24px;
   }
 }
