--- a/source/sass/base/section-caption.scss
+++ b/source/sass/base/section-caption.scss
@@ -7,3 +7,13 @@
   line-height: 24px;
   color: $color-darkgold;
 }
+
+
+@media only screen and (min-width: $tablet-width) {
+
+  .section-caption {
+    margin-bottom: 61px;
+    font-size: 45px;
+    line-height: 45px;
+  }
+}
