--- a/source/sass/blocks/destinations.scss
+++ b/source/sass/blocks/destinations.scss
@@ -2,8 +2,8 @@
   position: relative;
   z-index: 5;
   margin-top: -25px;
-  padding-top: 97px;
-  padding-bottom: 28px;
+  padding-top: 95px;
+  padding-bottom: 31px;
   background-color: $color-light-blue;
   border-bottom-left-radius: 32px;
   border-bottom-right-radius: 32px;
@@ -99,4 +99,101 @@
 
 .destanation__btn {
   margin-top: 18px;
+}
+
+
+@media only screen and (min-width: $tablet-width) {
+
+  .destanation {
+    margin-top: -50px;
+    padding-top: 116px;
+    padding-bottom: 80px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+    background-image: none;
+  }
+
+  .destanation__wrapper {
+    position: relative;
+    padding: 0 75px;
+    background-image: url("../img/flags-back@1x.png");
+    background-position: 92% 4%;
+    background-repeat: no-repeat;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 340px;
+      left: 40px;
+      @include size(141px);
+      border-radius: 20px;
+      background-color: #e2e5f2;
+    }
+  }
+
+  .destanation__content {
+    margin-bottom: 107px;
+    padding: 0;
+  }
+
+  .destanation__description {
+    font-size: 28px;
+    line-height: 33px;
+  }
+
+  .destanation__card {
+    flex-direction: row;
+    border-radius: 20px;
+
+    &:last-child &-country {
+      background: #fff;
+    }
+  }
+
+  .destanation__card-image {
+    @include size(186px, 140px);
+  }
+
+  .destanation__card-country {
+    flex-direction: column;
+    flex-grow: 1;
+    order: -1;
+    padding: 45px 0 15px 30px;
+
+    &::before {
+      top: 34px;
+      right: -35px;
+      left: auto;
+      @include size(70px, 47px);
+    }
+  }
+
+  .destanation__card-country-name {
+    font-size: 24px;
+  }
+
+  .destanation__card-country-description {
+    order: 0;
+    width: auto;
+    margin-top: 3px;
+    font-size: 20px;
+  }
+
+  .destanation__card-country-people {
+    margin-top: 12px;
+    margin-left: 0;
+    font-size: 20px;
+
+    &::before {
+      @include size(21px, 20px);
+    }
+  }
+
+  .destanation__btn {
+    margin-top: 48px;
+  }
+
+
+
+
 }
