--- a/source/sass/blocks/route.scss
+++ b/source/sass/blocks/route.scss
@@ -1,7 +1,7 @@
 .route {
   position: relative;
   margin-top: -28px;
-  padding-top: 60px;
+  padding-top: 62px;
   padding-bottom: 37px;
   border-bottom-left-radius: 32px;
   border-bottom-right-radius: 32px;
@@ -19,28 +19,68 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #192144;
   margin-bottom: 30px;
+  font-weight: 700;
+  color: #192144;
+  text-transform: uppercase;
 }
 
 .route__address-icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 45px;
-  height: 45px;
-  background-color: #121936;
+  @include size(45px);
   border-radius: 50%;
+  background-color: #121936;
 
   svg {
-    width: 18px;
-    height: 18px;
+    @include size(18px);
     fill: $color-lightgold;
   }
 }
 
 .route__address-text {
   margin-left: 16px;
-  font-weight: 700;
-  text-transform: uppercase;
+}
+
+
+@media only screen and (min-width: $tablet-width) {
+
+  .route {
+    margin-top: -60px;
+    padding-top: 109px;
+    padding-bottom: 85px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+  }
+
+  .route__wrapper {
+    padding: 0 75px;
+  }
+
+  .route__address {
+    font-size: 28px;
+  }
+
+  .route__address-icon {
+    @include size(67px);
+
+    svg {
+      @include size(31px);
+    }
+  }
+
+  .route__address-text {
+    margin-left: 26px;
+
+    br {
+      display: none;
+    }
+  }
+
+  .route__btn {
+    margin-top: 13px;
+    padding: 26px 34px;
+  }
+
 }
